# ccalib

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  main.cpp
glad/src/: glad.c
include/glad/include/glad/: glad.h
include/imgui/: imgui_additional_elements.cpp
src/: calibrator.cpp  calibrator.h  camera.cpp  camera.h  functions.cpp  functions.h  imgui_extensions.cpp  imgui_extensions.h  imgui_widgets.cpp  imgui_widgets.h  main.cpp  structures.cpp  structures.h
v4l2_device/include/: camera.h
v4l2_device/src/: camera.cpp
